# kbatch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yaml  publish-charts.yaml  publish-charts.yml  publish-image.yaml  release.yml  test-kbatch-chart.yaml  test.yaml
ci/: common  install.sh
docs/source/: conf.py  dev-guide.md  index.md  kbatch-proxy.md  user-guide.md
docs/source/examples/: dask-gateway-job.yaml  dask-gateway.md  dask-gateway.py  gpu-profile.py  gpu-profile.yaml  index.md  ndvi-blob-storage.md  ndvi-blob-storage.py  ndvi-blob-storage.yaml  shell-script.md  shell-script.yaml
docs/source/examples/streaming-logs/: README.md  config.yaml  streaming-logs.md
examples/dask-gateway/: README.md  dask_gateway_example.py
examples/ndvi-blob-storage/: README.md  job.yaml  ndvi-job.py  pod.yaml
examples/script/: README.md  job.yaml
examples/streaming-logs/: script.sh
integration-tests/: conftest.py  test_lifecycle.py  test_w_k8s.py
integration-tests/data/: incoming_job.json
kbatch/: README.md  pyproject.toml  setup.cfg
kbatch-cli/: cli.py
kbatch-proxy/: README.md  pyproject.toml  requirements.txt  setup.cfg
kbatch-proxy/docker/: .gitignore  docker-compose.yaml  jupyterhub_config.py
kbatch-proxy/docker/local/: Dockerfile  docker-compose.yaml  jupyterhub_config.py
kbatch-proxy/docker/production/: Dockerfile
kbatch-proxy/helm/kbatch-proxy/: Chart.yaml  values.yaml
kbatch-proxy/helm/kbatch-proxy/templates/: _helpers.tpl  deployment.yaml
kbatch-proxy/hub/: .gitignore  jupyterhub_config.py
kbatch-proxy/kbatch_proxy/: __init__.py  main.py  patch.py  utils.py
kbatch-proxy/tests/: job_template.yaml  profile_template.yaml  test_app.py  test_proxy.py  test_w_k8s.py
kbatch-proxy/tests/data/: incoming-job.json
kbatch-server/: .gitignore  Dockerfile  README.md  entrypoint  manage.py  openapi-schema.yml  output.ipynb  requirements.txt  setup.cfg
kbatch-server/app/: backend.py  config.py  main.py  models.py  test_app.py  test_backend.py
kbatch-server/django_kbatch_server/: apps.py  authentication.py  backend.py  models.py  serializers.py  types_.py  views.py
kbatch-server/django_kbatch_server/migrations/: 0001_initial.py
kbatch-server/django_kbatch_server/tests/: test_app.py  test_backend.py  test_validator.py
kbatch-server/docker/local/: Dockerfile  docker-compose.yaml  jupyterhub_config.py  start
kbatch-server/docker/production/: Dockerfile  entrypoint  start
kbatch-server/examples/: .gitignore  data.json  docker-compose.yml  jupyterhub_config.py  jupyterhub_config_local.py  script.sh  submit.sh
kbatch-server/helm/kbatch-server/: Chart.yaml  values.yaml
kbatch-server/helm/kbatch-server-ingress/: Chart.yaml
kbatch-server/helm/kbatch-server-ingress/templates/: nginx-configmap.yaml
kbatch-server/helm/kbatch-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
kbatch-server/helm/kbatch-server/templates/tests/: test-connection.yaml
kbatch-server/kbatch_server/: asgi.py  urls.py  wsgi.py
kbatch-server/kbatch_server/settings/: base.py  local.py  production.py  test.py
kbatch/kbatch/: __init__.py  __main__.py  _backend.py  _core.py  _types.py  cli.py
kbatch/kbatch_proxy/: __init__.py
kbatch/tests/: test_backend.py  test_client.py  test_core.py
kbatch/tests/data/: list_jobs.json  list_pods.json  logs.txt  show_job.json
ksubmit-cli/: cli.py
ksubmit-server/: .env.test  .gitignore  README.md  requirements.txt
ksubmit-server/app/: backend.py  config.py  main.py  test_app.py
ksubmit-server/examples/: docker-compose.yml  jupyterhub_config.py  jupyterhub_config_local.py
