[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = kbatch-proxy
version = 0.0.1


[options]
packages = find:
install_requires =
    escapism
    fastapi
    httpx
    jupyterhub
    kubernetes

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    kbatch = kbatch.cli:cli