[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = kbatch-proxy
version = 0.2.14
description = Proxy batch job requests to kubernetes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Augspurger
author_email = taugspurger@microsoft.com
url = https://github.com/kbatch-dev/kbatch

[options]
packages = find:
install_requires =
    escapism
    fastapi
    httpx
    jupyterhub
    kubernetes
    pydantic[dotenv]

[options.extras_require]
test =
    pytest
    pytest-mock

[options.entry_points]
console_scripts =
    kbatch = kbatch.cli:cli