[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = kbatch-proxy
version = 0.4.2
description = Proxy batch job requests to kubernetes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Augspurger
author_email = taugspurger@microsoft.com
url = https://github.com/kbatch-dev/kbatch

[options]
packages = find:
install_requires =
    escapism
    fastapi
    httpx
    jupyterhub
    kubernetes
    pydantic>=2,<3
    pydantic-settings

[options.extras_require]
all =
    %(test)s
    %(dev)s
test =
    pytest
    pytest-mock

dev = 
    uvicorn[standard]
    gunicorn==20.1.0
    rich

[options.entry_points]
console_scripts =
    kbatch = kbatch.cli:cli
