[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = kbatch-server
version = 0.0.1

[options]
packages = find:
install_requires =
    django
    django-environ
    django-rest-framework
    jupyterhub
    kubernetes
    escapism
    whitenoise
    django-storages[azure]  # TODO: configurable...


[options.extras_require]
test =
    notebook
    pytest
    pytest-mock
    pytest-django

[flake8]
exclude =
    __init__.py,
    _version.py,
    jupyterhub_config.py,
    jupyterhub_config_local.py,
    0001_initial.py,
    kbatch_server/settings/test.py,
ignore =
    # Import formatting
    E4,
    # Space before :
    E203,
    # Comparing types instead of isinstance
    E721,
    # Assign a lambda
    E731,
    # Ambiguous variable names
    E741,
    # Allow breaks before/after binary operators
    W503,
    W504

# black is set to 88, but isn't a strict limit so we add some wiggle room for
# flake8 testing.
max-line-length = 100

[tool:pytest]
DJANGO_SETTINGS_MODULE = kbatch_server.settings.test
