[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = kbatch
version = 0.0.1


[options]
packages = find:
install_requires =
    click
    rich
    httpx

[options.extras_require]
test =
    pytest
    respx

[options.entry_points]
console_scripts =
    kbatch = kbatch.cli:cli