[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = kbatch
version = 0.0.1


[options]
packages = find:
install_requires =
    click
    rich
    httpx
    pyyaml

[options.extras_require]
test =
    pytest
    respx

[options.entry_points]
console_scripts =
    kbatch = kbatch.cli:cli

[flake8]
exclude =
    __init__.py,
    _version.py,
    jupyterhub_config.py,
    jupyterhub_config_local.py,
    0001_initial.py,
ignore =
    # Import formatting
    E4,
    # Space before :
    E203,
    # Comparing types instead of isinstance
    E721,
    # Assign a lambda
    E731,
    # Ambiguous variable names
    E741,
    # Allow breaks before/after binary operators
    W503,
    W504

# black is set to 88, but isn't a strict limit so we add some wiggle room for
# flake8 testing.
max-line-length = 100