[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = kbatch
version = 0.4.2
description = Submit batch jobs to Kubernetes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Augspurger
author_email = taugspurger@microsoft.com
url = https://github.com/kbatch-dev/kbatch

[options]
packages = find:
install_requires =
    click
    rich
    httpx
    pyyaml
    kubernetes

[options.extras_require]
all =
    %(docs)s
    %(test)s
test =
    pytest
    respx
    mypy
    types-PyYAML
    pre-commit 

docs =
    sphinx
    myst-parser
    sphinx-click
    pydata-sphinx-theme

[options.entry_points]
console_scripts =
    kbatch = kbatch.cli:main

[flake8]
exclude =
    __init__.py,
    _version.py,
    jupyterhub_config.py,
    jupyterhub_config_local.py,
    0001_initial.py,
ignore =
    # Import formatting
    E4,
    # Space before :
    E203,
    # Comparing types instead of isinstance
    E721,
    # Assign a lambda
    E731,
    # Ambiguous variable names
    E741,
    # Allow breaks before/after binary operators
    W503,
    W504

# black is set to 88, but isn't a strict limit so we add some wiggle room for
# flake8 testing.
max-line-length = 100
